avoid flashing on dark mode refresh

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -17,8 +17,6 @@
     --color-secondary-bg: #333333;
     --color-primary-txt: #f4f4f4;
     --color-secondary-txt: #bbbbbb;
-
-    --color-error: #ff6b6b;
   }
 }
 
